# ff-utility

./: .gitmodules  README.md  pyproject.toml
docs/: ff-utility_installation.md
docs/assets/: ff-utility_allocation.drawio
src/: cli.py
src/bb/: common.py  db.py  git_ops.py  ollama_client.py
src/commands/: concept.py  init.py
