[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ff-utility"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "sqlite-vec>=0.1",
]

[project.scripts]
ff = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
